added to activities.js

--- a/activities.html
+++ b/activities.html
@@ -36,12 +36,28 @@
     
     <h1>Local Activities</h1>
 
-    <!-- Include Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <!-- link in activities.js -->
-    <script src="scripts/activities.js"></script>
+<section>
+    <form id="categoriesForm">
+    <select name="categoriesSelect" id="categoriesSelect">
+
+    </select>
+
+    <button>Select a Category</button>
+
+    </form>
+
+    <p id="results"></p>
+</section>
+
+
+
+<!-- Include Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
+<!-- link in activities.js -->
+<script src="scripts/activities.js"></script>
+
 </body>
 
 </html>
