fixed dropdown function

--- a/activities.html
+++ b/activities.html
@@ -36,10 +36,9 @@
     
     <h1>Local Activities</h1>
 
-<section>
-    <form id="categoriesForm">
-    <select name="categoriesSelect" id="categoriesSelect">
 
+    <form id="categoriesForm">
+    <select id="categoriesSelect" name="categoriesSelect">
     </select>
 
     <button>Select a Category</button>
@@ -47,7 +46,7 @@
     </form>
 
     <p id="results"></p>
-</section>
+
 
 
 
