fixed second dropdown

--- a/activities.html
+++ b/activities.html
@@ -40,6 +40,8 @@
     <form id="categoriesForm">
     <select id="categoriesSelect" name="categoriesSelect">
     </select>
+    <select id="activitiesList" name="activitiesList">
+    </select>
 
     <button>Select a Category</button>
 
